--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.0",
+    "@tanstack/react-query": "^5.56.0",
+    "antd": "^5.21.0",
+    "axios": "^1.7.7",
+    "dayjs": "^1.11.19",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
-    "@tanstack/react-query": "^5.56.0",
-    "axios": "^1.7.7",
-    "antd": "^5.21.0",
-    "@ant-design/icons": "^5.3.0",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
@@ -32,4 +33,3 @@
     "vite": "^5.4.2"
   }
 }
-
