--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,29 @@
+# Редирект с HTTP на HTTPS
 server {
     listen 80;
-    server_name _;
+    server_name wb-solution.ru www.wb-solution.ru;
+    
+    # Редирект на HTTPS
+    return 301 https://$server_name$request_uri;
+}
+
+# HTTPS сервер
+server {
+    listen 443 ssl http2;
+    server_name wb-solution.ru www.wb-solution.ru;
     root /usr/share/nginx/html;
     index index.html;
+
+    # SSL сертификаты (монтируются из /etc/letsencrypt)
+    ssl_certificate /etc/letsencrypt/live/wb-solution.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/wb-solution.ru/privkey.pem;
+
+    # SSL настройки безопасности
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
+    ssl_prefer_server_ciphers off;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
 
     # Gzip compression
     gzip on;
