--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,44 @@
-# Редирект с HTTP на HTTPS
+# Редирект с HTTP на HTTPS (только для домена)
 server {
     listen 80;
     server_name wb-solution.ru www.wb-solution.ru;
     
     # Редирект на HTTPS
     return 301 https://$server_name$request_uri;
+}
+
+# Доступ по IP адресу (без SSL, так как сертификат привязан к домену)
+server {
+    listen 80 default_server;
+    server_name _;
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # Gzip compression
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json;
+
+    # Статика фронтенда
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+
+    # Проксирование API запросов к бэкенду
+    location /api {
+        proxy_pass http://backend:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Кеширование статических ресурсов
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
 }
 
 # HTTPS сервер
