временно открыть доступ по ip

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,5 @@
-# Редирект с HTTP на HTTPS (только для домена)
-server {
-    listen 80;
-    server_name wb-solution.ru www.wb-solution.ru;
-    
-    # Редирект на HTTPS
-    return 301 https://$server_name$request_uri;
-}
-
 # Доступ по IP адресу (без SSL, так как сертификат привязан к домену)
+# Этот блок должен быть первым и иметь default_server, чтобы обрабатывать запросы по IP
 server {
     listen 80 default_server;
     server_name _;
@@ -39,6 +31,16 @@ server {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
+}
+
+# Редирект с HTTP на HTTPS (только для домена)
+# Этот блок обрабатывает только запросы с Host: wb-solution.ru
+server {
+    listen 80;
+    server_name wb-solution.ru www.wb-solution.ru;
+    
+    # Редирект на HTTPS
+    return 301 https://$server_name$request_uri;
 }
 
 # HTTPS сервер
