--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,64 @@
-# HTTP сервер - отдает контент без редиректов
-# Обрабатывает все запросы (по IP и по домену)
+# Доступ по IP адресу (без SSL, так как сертификат привязан к домену)
+# Этот блок обрабатывает запросы по IP
 server {
     listen 80 default_server;
     server_name _;
     root /usr/share/nginx/html;
     index index.html;
+
+    # Gzip compression
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json;
+
+    # Статика фронтенда
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+
+    # Проксирование API запросов к бэкенду
+    location /api {
+        proxy_pass http://backend:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Кеширование статических ресурсов
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+}
+
+# Редирект с HTTP на HTTPS (только для домена)
+server {
+    listen 80;
+    server_name wb-solution.ru www.wb-solution.ru;
+    
+    # Редирект на HTTPS
+    return 301 https://$server_name$request_uri;
+}
+
+# HTTPS сервер
+server {
+    listen 443 ssl http2;
+    server_name wb-solution.ru www.wb-solution.ru;
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # SSL сертификаты (монтируются из /etc/letsencrypt)
+    ssl_certificate /etc/letsencrypt/live/wb-solution.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/wb-solution.ru/privkey.pem;
+
+    # SSL настройки безопасности
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
+    ssl_prefer_server_ciphers off;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
 
     # Gzip compression
     gzip on;
